Update reward Page
Update reward Page

--- a/src/app/reward-page/reward-page.page.html
+++ b/src/app/reward-page/reward-page.page.html
@@ -1,9 +1,90 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>reward-page</ion-title>
+    <ion-title>Reward</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  
+<ion-content>   
+    <ion-grid>
+      <ion-row>
+        <ion-col size="6">
+          <ion-card>
+            <img src="assets\reward-icon\BachaCoffee.JPG" />
+            <ion-card-content>
+              <ion-card-title>
+                BACHA I LOVE PARIS COFFEE - GROUND BEANS - FINE FLAVOURED
+              </ion-card-title>
+              <p>
+                The Signature Nomad gift box features a beautiful jewel box clasp, symbolic of the quality and craftsmanship of the
+                coffee inside. Each coffee in this collection represents a destination, a flavour, an aroma from around the world. A
+                tour of the senses, the Nomad collection is a personal indulgence and the perfect gift for a coffee lover. Available in
+                ground beans, packed in a sealed aluminium bag.
+              </p>
+
+              <ion-row no-padding>
+                <ion-col>
+                  <button ion-button clear small color="danger" icon-start>
+                    <ion-icon name='star'></ion-icon>
+                    Favorite
+                  </button>
+                </ion-col>
+                <ion-col text-center>
+                  <button ion-button clear small color="danger" icon-start>
+                    <ion-icon name='bag'></ion-icon>
+                    Exchange
+                  </button>
+                </ion-col>
+                <ion-col text-right>
+                  <button ion-button clear small color="danger" icon-start>
+                    <ion-icon name='share'></ion-icon>
+                    Share
+                  </button>
+                </ion-col>
+              </ion-row>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      
+          <ion-col size="6">
+            <ion-card>
+              <img src="assets\reward-icon\BachaCoffee.JPG" />
+              <ion-card-content>
+                <ion-card-title>
+                  BACHA I LOVE PARIS COFFEE - GROUND BEANS - FINE FLAVOURED
+                </ion-card-title>
+                <p>
+                  The Signature Nomad gift box features a beautiful jewel box clasp, symbolic of the quality and craftsmanship of
+                  the
+                  coffee inside. Each coffee in this collection represents a destination, a flavour, an aroma from around the
+                  world. A
+                  tour of the senses, the Nomad collection is a personal indulgence and the perfect gift for a coffee lover.
+                  Available in
+                  ground beans, packed in a sealed aluminium bag.
+                </p>
+          
+                <ion-row no-padding>
+                  <ion-col>
+                    <button ion-button clear small color="danger" icon-start>
+                      <ion-icon name='star'></ion-icon>
+                      Favorite
+                    </button>
+                  </ion-col>
+                  <ion-col text-center>
+                    <button ion-button clear small color="danger" icon-start>
+                      <ion-icon name='bag'></ion-icon>
+                      Exchange
+                    </button>
+                  </ion-col>
+                  <ion-col text-right>
+                    <button ion-button clear small color="danger" icon-start>
+                      <ion-icon name='share'></ion-icon>
+                      Share
+                    </button>
+                  </ion-col>
+                </ion-row>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+      </ion-row>
+    </ion-grid>
 </ion-content>
