--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -15,6 +15,12 @@
       <ion-icon name="square"></ion-icon>
       <ion-label>Tab 3</ion-label>
     </ion-tab-button>
+
+      <ion-tab-button tab="reward-page">
+        <ion-icon name="file-tray-full-outline"></ion-icon>
+        <ion-label>Reward</ion-label>
+      </ion-tab-button>
+
   </ion-tab-bar>
 
 </ion-tabs>
