--- a/src/app/product-page/product-page.page.html
+++ b/src/app/product-page/product-page.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>product-page</ion-title>
+    <ion-title>Products</ion-title>
   </ion-toolbar>
 </ion-header>
 
