--- a/src/app/add-product-page/add-product-page.page.html
+++ b/src/app/add-product-page/add-product-page.page.html
@@ -5,5 +5,28 @@
 </ion-header>
 
 <ion-content>
+  <form [formGroup]="productForm" (ngSubmit)="createProduct()">
 
+  <ion-item>
+      <ion-label position="stacked">Name</ion-label>
+      <ion-input formControlName="name"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="stacked">Desccription</ion-label>
+    <ion-textarea rows="6" formControlName="desc"></ion-textarea>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="stacked">Price</ion-label>
+    <ion-input formControlName="price"></ion-input>
+  </ion-item>
+
+  <ion-button type="submit" expand="block" class="ion-padding-horizontal ion-margin-vertical"
+  [disabled]="!productForm.valid">
+    Save Product
+  </ion-button>
+
+
+  </form>
 </ion-content>
