--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,9 +11,14 @@
       <ion-label>Promotions</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="product-page">
       <ion-icon name="square"></ion-icon>
       <ion-label>Products</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="add-product-page">
+      <ion-icon name="square"></ion-icon>
+      <ion-label>Add-Product</ion-label>
     </ion-tab-button>
 
       <ion-tab-button tab="reward-page">
