--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,8 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
+    <ion-button slot="start" [routerLink]="['/advertiser-page']">
+      Advertiser Page
+  </ion-button>
 
     <ion-title class="ion-text-center">Promotions</ion-title>
 
