--- a/src/app/authentication/login/login.page.html
+++ b/src/app/authentication/login/login.page.html
@@ -1,27 +1,29 @@
 <ion-header>
 	<ion-toolbar color="primary">
-		<ion-title>My App</ion-title>
+	  <ion-title>Login</ion-title>
 	</ion-toolbar>
-</ion-header>
-
-<ion-content class="ion-padding">
-	<form (ngSubmit)="login()" [formGroup]="credentials">
-		<ion-item fill="solid" class="ion-margin-bottom">
-			<ion-input type="email" placeholder="Email" formControlName="email"></ion-input>
-			<ion-note slot="error" *ngIf="(email!.dirty || email!.touched) && email!.errors"
-				>Email is invalid</ion-note
-			>
-		</ion-item>
-		<ion-item fill="solid" class="ion-margin-bottom">
-			<ion-input type="password" placeholder="Password" formControlName="password"></ion-input>
-			<ion-note slot="error" *ngIf="(password!.dirty || password!.touched) && password!.errors"
-				>Password needs to be 6 characters</ion-note
-			> 
-		</ion-item>
-
-		<ion-button type="submit" expand="block" [disabled]="!credentials.valid">Log in</ion-button>
-		<ion-button type="button" expand="block" color="secondary" (click)="register()"
-			>Create account</ion-button
-		>
+  </ion-header>
+  
+  <ion-content class="ion-padding">
+  
+	<form (ngSubmit)="login()" [formGroup]="credentialsForm">
+	  <ion-item>
+		<ion-input type="email" placeholder="Email" 
+		name="email" formControlName="email"></ion-input>
+	  </ion-item>
+  
+	  <ion-item>
+		<ion-input type="password" placeholder="Password" 
+		name="password" formControlName="password"></ion-input>
+	  </ion-item>
+  
+	  <ion-button color="primary" expand="full" type="submit" [disabled]="!credentialsForm.valid">
+		Login
+	  </ion-button>
+	  <ion-button color="secondary" expand="full" type="button" (click)="register()" [disabled]="!credentialsForm.valid">
+		Create Account
+	  </ion-button>
+  
 	</form>
-</ion-content>
+  </ion-content>
+  
