--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,9 +7,7 @@
     <ion-title class="ion-text-center">Promotions</ion-title>
 
     <ion-buttons slot="end">
-      <ion-button fill="clear">
-        <ion-icon slot="icon-only" name="cart" padding=10px></ion-icon>
-      </ion-button>
+      
     </ion-buttons>
 
   </ion-toolbar>
@@ -17,7 +15,9 @@
 
 <ion-content [fullscreen]="true">
   <ion-header>
-
+    <ion-button fill="clear">
+      <ion-icon slot="icon-only" name="chatbubbles-outline" padding=10px [routerLink]="['/overview']"></ion-icon>
+    </ion-button>
       <ion-card>
         <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
         <ion-card-header>
