--- a/src/app/product-page/product-page.page.html
+++ b/src/app/product-page/product-page.page.html
@@ -1,11 +1,49 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Products</ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button fill="clear">
+        <ion-icon slot="icon-only" name="add-circle-outline" padding=10px></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  
+    <ion-title >Products</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    
+
+    <ion-item *ngFor="let product of products">
+      <ion-card>
+        <ion-card-content>
+
+          <ion-card-title>
+
+            <ion-label>
+              {{ product.productName }}
+            </ion-label>
+            <p>
+              {{ product.productDescription }}
+            </p>
+            <p>
+              {{ product.productCategory }}
+            </p>
+            <p>
+              {{ product.productPrice }}
+            </p>
+
+          </ion-card-title>
+
+      </ion-card-content>
+      </ion-card>
+    </ion-item>
+
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+      <ion-fab-button (click)="addProduct()">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+
   </ion-list>
 </ion-content>
