--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -26,8 +26,10 @@
       <ion-button expand="block" color="secondary" type="submit" (click)="set()">Set Budget</ion-button>
     </ion-item>
   </ion-list>
-
+  
   <ion-content class="ion-padding">
+    <ion-button id="open-modal" expand="block">Add Expense</ion-button>
+
     <ion-button id="open-modal" expand="block">Personal Expenses</ion-button>
 
     <ion-modal
@@ -44,12 +46,12 @@
           </ion-label>
         </div>
         <ion-list>
-          <ion-item *ngFor="let item of expense">
+          <ion-item *ngFor="let expense of expenses">
             <ion-label>
-            <h2>{{item.name}}</h2>
-            <p>Price: ${{item.price}}</p>
-            <p>Date of Expense: {{item.date}}</p>
-            <p>Category: {{item.category}}</p>
+            <h2>{{expense.expenseName}}</h2>
+            <p>Price: ${{expense.expensePrice}}</p>
+            <p>Date of Expense: {{expense.expenseDate}}</p>
+            <p>Category: {{expense.expenseCategory}}</p>
             </ion-label>
           </ion-item>
         </ion-list>
