--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -26,12 +26,10 @@
       <ion-button expand="block" color="secondary" type="submit" (click)="set()">Set Budget</ion-button>
     </ion-item>
   </ion-list>
-  
+
   <ion-content class="ion-padding">
-    <ion-button id="open-modal" expand="block">Add Expense</ion-button>
-
+    <ion-button (click)="addExpense()" expand="block">Add Expense</ion-button>
     <ion-button id="open-modal" expand="block">Personal Expenses</ion-button>
-
     <ion-modal
     trigger="open-modal"
     [initialBreakpoint]="0.25"
