--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -15,7 +15,7 @@
 
 <ion-content [fullscreen]="true">
   <ion-header>
-    <ion-button fill="clear">
+    <ion-button fill="clear" [routerLink]="['/overview']">
       <ion-icon slot="icon-only" name="chatbubbles-outline" padding=10px [routerLink]="['/overview']"></ion-icon>
     </ion-button>
       <ion-card>
