--- a/src/app/modal/modal.page.html
+++ b/src/app/modal/modal.page.html
@@ -22,6 +22,11 @@
     </ion-item>
 
     <ion-item>
+      <ion-label position="stacked">Reward Image</ion-label>
+      <ion-input [(ngModel)]="reward.rewardImage" rows="8"></ion-input>
+    </ion-item>
+
+    <ion-item>
       <ion-label position="stacked">Reward Details</ion-label>
       <ion-textarea [(ngModel)]="reward.rewardDetail" rows="8"></ion-textarea>
     </ion-item>
