--- a/src/app/overview/overview.page.html
+++ b/src/app/overview/overview.page.html
@@ -9,11 +9,15 @@
     <ion-buttons slot="end">
       <ion-button (click)="startGroup()">
         <ion-icon slot="icon-only" name="add"></ion-icon>
-      </ion-button>
+    </ion-button>
     </ion-buttons>
-    
   </ion-toolbar>
+  
+
 </ion-header>
+<ion-button [routerLink]="['/advertiser-page']">
+  Advertiser Page
+</ion-button>
 
 <ion-content>
 <ion-list>
