--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,65 +6,30 @@
 
     <ion-title class="ion-text-center">Promotions</ion-title>
 
-    <ion-buttons slot="end">
-      
-    </ion-buttons>
+    <ion-button slot="end" fill="clear" [routerLink]="['/overview']">
+      <ion-icon slot="icon-only" name="chatbubbles-outline" padding=10px [routerLink]="['/overview']"></ion-icon>
+    </ion-button>
 
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  
   <ion-header>
-    <ion-button fill="clear" [routerLink]="['/overview']">
-      <ion-icon slot="icon-only" name="chatbubbles-outline" padding=10px [routerLink]="['/overview']"></ion-icon>
-    </ion-button>
-      <ion-card>
-        <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+
+  </ion-header>
+
+   <ion-item *ngFor="let advert of adverts" >
+    <ion-card>
+        <ion-img [src]="advert.file"></ion-img>
         <ion-card-header>
-          <ion-card-title>Advertisement 1</ion-card-title>
+          <ion-card-title>{{ advert.title }}</ion-card-title>
           <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
         </ion-card-header>
-      
         <ion-card-content>
           Here's a small text description for the card content. Nothing more, nothing less.
         </ion-card-content>
       </ion-card>
-  
-  </ion-header>
-
-    <ion-card>
-      <ion-card-content>
-        <ion-list>
-          <ion-item>
-            <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
-            </ion-thumbnail>
-            <ion-label>Item</ion-label>
-          </ion-item>
-    
-          <ion-item>
-            <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
-            </ion-thumbnail>
-            <ion-label>Item</ion-label>
-          </ion-item>
-    
-          <ion-item>
-            <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
-            </ion-thumbnail>
-            <ion-label>Item</ion-label>
-          </ion-item>
-    
-          <ion-item lines="none">
-            <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
-            </ion-thumbnail>
-            <ion-label>Item</ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-card-content>
-    </ion-card>
-
-
+  </ion-item>
+   
 </ion-content>
