--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-button slot="start" [routerLink]="['/advertiser-page']">
+    <ion-button fill="clear" slot="start" [routerLink]="['/advertiser-page']">
       Advertiser Page
     </ion-button>
 
@@ -27,7 +27,7 @@
           <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
         </ion-card-header>
         <ion-card-content>
-          Here's a small text description for the card content. Nothing more, nothing less.
+          {{ advert.desc }}
         </ion-card-content>
       </ion-card>
   </ion-item>
