--- a/src/app/pages/products/add-product-page/add-product-page.page.html
+++ b/src/app/pages/products/add-product-page/add-product-page.page.html
@@ -5,12 +5,13 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
     <ion-item *ngFor="let product of products">
-      <ion-col size="12" width="100%">
 
+      <img src="{{ product.productImage }}" class="image-size"/>
+
+      <ion-col size="12" width="100%">
        <ion-card>
-        
+   
         <ion-card-content>
           <ion-card-title>
 
@@ -44,16 +45,11 @@
                 Edit
             </button>
             </ion-col>
-
           </ion-row>
-
         </ion-card-content>
-
        </ion-card>
-
       </ion-col>
     </ion-item>
-  </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="addProduct()">
