--- a/src/app/pages/products/product-page/product-page.page.html
+++ b/src/app/pages/products/product-page/product-page.page.html
@@ -15,6 +15,9 @@
   <ion-list>
 
     <ion-item *ngFor="let product of products">
+
+      <img src="{{ product.productImage }}" class="image-size"/>
+      
       <ion-card>
         <ion-card-content>
 
