Update / Delete for Expenses Completed
UI Refinement in Progress

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -44,16 +44,13 @@
           </ion-label>
         </div>
         <ion-list>
-          <ion-item *ngFor="let expense of expenses">
+          <ion-item *ngFor="let expense of expenses" (click)="openExpense(expense)">
             <ion-label>
             <h2>{{expense.expenseName}}</h2>
             <p>Price: ${{expense.expensePrice}}</p>
             <p>Date of Expense: {{expense.expenseDate}}</p>
             <p>Category: {{expense.expenseCategory}}</p>
             </ion-label>
-            <ion-button slot="end" name="trash-bin" (click)="updateExpense()">Update</ion-button>
-            <br>
-            <ion-button slot="end" name="trash-bin" (click)="deleteExpense(expense)">Delete</ion-button>
           </ion-item>
         </ion-list>
       </ion-content>
