Added Product Banner

--- a/src/app/pages/products/add-product-page/add-product-page.page.html
+++ b/src/app/pages/products/add-product-page/add-product-page.page.html
@@ -1,6 +1,14 @@
 <ion-header>
   <ion-toolbar>
+
+    <ion-buttons slot="end">
+      <ion-button fill="clear" [routerLink]="['/add-productbanner-page']">
+        <ion-icon slot="icon-only" name="image-outline" padding=10px></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
     <ion-title>Add Product</ion-title>
+    
   </ion-toolbar>
 </ion-header>
 
