--- a/src/app/modals/modal/modal.page.html
+++ b/src/app/modals/modal/modal.page.html
@@ -17,7 +17,7 @@
     </ion-item>
 
     <ion-item>
-      <ion-label position="stacked">Reward Cost</ion-label>
+      <ion-label position="stacked">Point Cost</ion-label>
       <ion-input [(ngModel)]="reward.rewardCost" rows="8"></ion-input>
     </ion-item>
 
