--- a/src/app/expense-modal/expense-modal.page.html
+++ b/src/app/expense-modal/expense-modal.page.html
@@ -18,12 +18,12 @@
 
     <ion-item>
       <ion-label position="stacked">Product Price</ion-label>
-      <ion-input [(ngModel)]="expense.expensePrice"></ion-input>
+      <ion-input type="number" [(ngModel)]="expense.expensePrice"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label position="stacked">Date of Expense</ion-label>
-      <ion-input [(ngModel)]="expense.expenseDate"></ion-input>
+      <ion-input type="date" [(ngModel)]="expense.expenseDate"></ion-input>
     </ion-item>
   </div>
 
