--- a/src/app/budget/set-budget/set-budget.page.html
+++ b/src/app/budget/set-budget/set-budget.page.html
@@ -19,6 +19,10 @@
       <ion-label>Reset Date: </ion-label>
       <ion-input type="date" formControlName="date"></ion-input>
     </ion-item>
+    <ion-item class="visibly-hidden">
+      <ion-label>Point: </ion-label>
+      <ion-input type="number" formControlName="point"></ion-input>
+    </ion-item>
     <ion-button expand="block" color="secondary" type="submit" (click)="set()">
       Set
     </ion-button>
