--- a/src/app/pages/rewards/reward-page/reward-page.page.html
+++ b/src/app/pages/rewards/reward-page/reward-page.page.html
@@ -14,14 +14,25 @@
         </ion-avatar>
         <ion-label id="profile-name">
           <h1>{{personal.personalName}}</h1>
-          <h2>Budget Set: {{personal.personalBudget}}</h2>
-          <h2>Reward Point: 5000</h2>
+          <h2>Point : {{personal.personalPoint}}</h2>
         </ion-label>
       </ion-item>
     </ion-list>
   </div>
 
-        <ion-item *ngFor="let reward of rewards" >
+  <div>
+    <ion-list>
+      <ion-item>
+        <ion-select #rewardCat placeholder="Filter By Category" (ionChange)="filterData(rewardCat.value)" >
+          <ion-select-option value="Home">Home</ion-select-option>
+          <ion-select-option value="Food">Food</ion-select-option>
+          <ion-select-option value="Drink">Drink</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-list>
+  </div>
+
+        <ion-item *ngFor="let reward of filteredRewards" >
           <ion-col size="12" width="100%">
             <ion-card>
               <img src="{{ reward.rewardImage }}" class="image-size"/>
