--- a/src/app/pages/products/add-productbanner-page/add-productbanner-page.page.html
+++ b/src/app/pages/products/add-productbanner-page/add-productbanner-page.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/add-product-page"></ion-back-button>
+    </ion-buttons>
     <ion-title>Add Product Banner</ion-title>
   </ion-toolbar>
 </ion-header>
