--- a/src/app/pages/products/product-page/product-page.page.html
+++ b/src/app/pages/products/product-page/product-page.page.html
@@ -14,31 +14,46 @@
 <ion-content>
   <ion-list>
 
+    <ion-slides>
+      <ion-slide *ngFor="let productBanner of productbanners">
+        <img src="{{ productBanner.banner }}" class="image-size"/>
+      </ion-slide>
+    </ion-slides>
+
     <ion-item *ngFor="let product of products">
 
       <img src="{{ product.productImage }}" class="image-size"/>
       
       <ion-card>
         <ion-card-content>
-
           <ion-card-title>
 
             <ion-label>
-              {{ product.productName }}
+            {{ product.productName }}
             </ion-label>
             <p>
-              {{ product.productDescription }}
-            </p>
-            <p>
-              {{ product.productCategory }}
-            </p>
-            <p>
-              {{ product.productPrice }}
+            {{ product.productDescription }}
             </p>
 
           </ion-card-title>
 
-      </ion-card-content>
+          <ion-row no-padding>
+            <ion-col >
+              <label icon-start>
+                <ion-icon name='grid-outline'></ion-icon>
+              {{ product.productCategory }}
+              </label>
+            </ion-col>
+
+            <ion-col text-center>
+              <label icon-start>
+                <ion-icon name='cash'></ion-icon>
+              {{ product.productPrice }}
+              </label>
+            </ion-col>
+
+          </ion-row>
+        </ion-card-content>
       </ion-card>
     </ion-item>
 
