post owner + admin portal

--- a/src/app/authentication/login/login.page.html
+++ b/src/app/authentication/login/login.page.html
@@ -17,10 +17,10 @@
 		name="password" formControlName="password"></ion-input>
 	  </ion-item>
   
-	  <ion-button color="primary" expand="full" type="submit" [disabled]="!credentialsForm.valid">
+	  <ion-button color="primary" expand="block" type="submit" [disabled]="!credentialsForm.valid">
 		Login
 	  </ion-button>
-	  <ion-button color="secondary" expand="full" type="button" [routerLink]="['/register']">
+	  <ion-button color="secondary" expand="block" type="button" [routerLink]="['/register']">
 		Create Account
 	  </ion-button>
   
