--- a/src/app/authentication/register/register.page.html
+++ b/src/app/authentication/register/register.page.html
@@ -23,10 +23,10 @@
 		name="password" formControlName="password"></ion-input>
 	  </ion-item>
   
-	  <ion-button color="secondary" expand="full" type="button" type="submit" [disabled]="!credentialsForm.valid">
+	  <ion-button color="secondary" expand="block" type="button" type="submit" [disabled]="!credentialsForm.valid">
 		Create Account
 	  </ion-button>
-    <ion-button color="primary" expand="full" [routerLink]="['/login']">
+    <ion-button color="primary" expand="block" [routerLink]="['/login']">
       Back to Login
     </ion-button>
   
