--- a/src/app/pages/products/product-page/product-page.page.html
+++ b/src/app/pages/products/product-page/product-page.page.html
@@ -20,6 +20,8 @@
       </ion-slide>
     </ion-slides>
 
+    &nbsp;
+
     <ion-item *ngFor="let product of products">
 
       <img src="{{ product.productImage }}" class="image-size"/>
